package FactoryMethodPattern;

public enum PaymentMethodType {
	
	PAY_BY_CASH, 
	PAY_BY_CREDIT_CARD, 
	PAY_BY_DEBIT_CARD, 
	PAY_BY_REVOLUT_CARD, 
	PAY_BY_PAYPAL;

}
