package Strategy;

public interface PaymentMethod {
	
	public void pay(double amount);
	
	public void paymentInformation();
}
