@startuml
 skinparam classAttributeIconSize 0
title __FACTORYMETHODPATTERN's Class Diagram__\n



      interface com.MovieBookingSystem.FactoryMethodPattern.PaymentFactoryCreator {
          {abstract} + getPaymentMethod()
      }


  



      class com.MovieBookingSystem.FactoryMethodPattern.PaymentFactoryMethod {
          + getPaymentMethod()
      }



      interface com.MovieBookingSystem.Strategy.PaymentMethod {
          {abstract} + pay()
      }

   class com.MovieBookingSystem.Strategy.Revolut {
          + Revolut()
          + Revolut()
          + getCardType()
          # validatePayment()
      }


 class com.MovieBookingSystem.Strategy.Cash {
          + pay()
          + paymentInformation()
      }







      class com.MovieBookingSystem.Strategy.CreditCard {
          + CreditCard()
          + CreditCard()
          + getCardType()
          # validatePayment()
      }




      class com.MovieBookingSystem.Strategy.DebitCard {
          + DebitCard()
          + DebitCard()
          + getCardType()
          # validatePayment()
      }








      class com.MovieBookingSystem.Strategy.PayPal {
          ~ email : String
          ~ password : String
          ~ username : String
          - READER : BufferedReader
          + PayPal()
          + PayPal()
          + getEmail()
          + getPassword()
          + getUsername()
          + pay()
          + paymentInformation()
          + setEmail()
          + setPassword()
          + setUsername()
      }


      abstract class com.MovieBookingSystem.Strategy.VisaCard {
          - READER : BufferedReader
          - cardNumber : String
          - cvv : int
          - expiryDate : String
          - nameOnCard : String
          + getCardNumber()
          + getCvv()
          + getExpiryDate()
          + getNameOnCard()
          + pay()
          + paymentInformation()
          + setCardNumber()
          + setCvv()
          + setExpiryDate()
          + setNameOnCard()
          {abstract} # getCardType()
          {abstract} # validatePayment()
      }





    namespace om.MovieBookingSystem.FactoryMethodPattern {
      enum PaymentMethodType {
        PAY_BY_CASH
        PAY_BY_CREDIT_CARD
        PAY_BY_DEBIT_CARD
        PAY_BY_PAYPAL
        PAY_BY_REVOLUT_CARD
      }
    }

  

  com.MovieBookingSystem.FactoryMethodPattern.PaymentFactoryMethod .up.|> com.MovieBookingSystem.FactoryMethodPattern.PaymentFactoryCreator

  com.MovieBookingSystem.Strategy.Cash .up.|> com.MovieBookingSystem.Strategy.PaymentMethod
  com.MovieBookingSystem.Strategy.CreditCard -up-|> com.MovieBookingSystem.Strategy.VisaCard
  com.MovieBookingSystem.Strategy.DebitCard -up-|> com.MovieBookingSystem.Strategy.VisaCard
  com.MovieBookingSystem.Strategy.PayPal .up.|> com.MovieBookingSystem.Strategy.PaymentMethod
  com.MovieBookingSystem.Strategy.Revolut -up-|> com.MovieBookingSystem.Strategy.VisaCard
  com.MovieBookingSystem.Strategy.VisaCard .up.|> com.MovieBookingSystem.Strategy.PaymentMethod

com.MovieBookingSystem.FactoryMethodPattern.PaymentFactoryMethod --> com.MovieBookingSystem.Strategy.PaymentMethod
right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
